--- a/index.htm
+++ b/index.htm
@@ -1,67 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<meta name="viewport" content="width=device-width">
 	<meta charset="UTF-8">
 	<title>When you leave your Jacket in Maximilians Car</title>
 </head>
 <style>
 	body{
-		background-image: url("src/giphy.gif");
-		background-repeat: repeat-x;
-		background-position: center;
-		height: 100vh;
+		margin: 0;
 		overflow: hidden;
 	}
-	video{
-		height: 0px;
-		width: 0px;
-		visibility: hidden;
-	}
-	  body {
-	  -webkit-animation: argh-my-eyes .3s infinite;
-	  -moz-animation:    argh-my-eyes .3s infinite;
-	  animation:         argh-my-eyes .3s infinite;
-	}
-	@-webkit-keyframes argh-my-eyes {
-		0%   { background-color: red;}
-		49% { background-color: blue;}
-		50% { background-color: green;}
-		99% { background-color: fuchsia;}
-		100% { background-color: brown;}
-	  }
-	  @-moz-keyframes argh-my-eyes {
-		0%   { background-color: red;}
-		49% { background-color: blue;}
-		50% { background-color: green;}
-		99% { background-color: fuchsia;}
-		100% { background-color: brown;}
-	  }
-	  @keyframes argh-my-eyes {
-		0%   { background-color: red;}
-		49% { background-color: blue;}
-		50% { background-color: green;}
-		99% { background-color: fuchsia;}
-		100% { background-color: brown;}
+	  iframe{
+	  	height: 100vh;
+	  	width: 100vw;
 	  }
 </style>
-<!-- <script>
-	function flashtext(ele,col) {
-			var tmpColCheck = document.getElementById('ele').style.backgroundColor;
-			  if (tmpColCheck === 'silver') {
-				document.getElementById('ele').style.backgroundColor = col;
-			  } else {
-				document.getElementById('ele').style.backgroundColor = 'silver';
-			  }
-			} 
-			
-			setInterval(function() {
-				flashtext('flashingtext','red');
-				flashtext('flashingtext2','blue');
-				flashtext('flashingtext3','green');
-			}, 50 ); //set an interval timer up to repeat the function
-</script> -->
-<body id="ele">
-	<video preload="auto" src="src/never.mp4" autoplay loop></video>
-	<video preload="auto" src="src/scream.mp4" autoplay loop></video>
+<body>
+	<iframe rel="preload" src="content.html" frameborder="0"></iframe>
 </body>
 </html>
