--- a/index.htm
+++ b/index.htm
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta name="viewport" content="width=device-width">
+	<meta http-equiv="cache-control" content="no-cache" />
 	<meta charset="UTF-8">
 	<title>When you leave your Jacket in Maximilians Car</title>
 </head>
