--- a/content.html
+++ b/content.html
@@ -16,11 +16,11 @@
 		background-repeat: repeat-x;
 		background-position: center;
 	}
-	video{
+/*	video{
 		height: 0px;
 		width: 0px;
 		visibility: hidden;
-	}
+	}*/
 /*	body {
 	  -webkit-animation: argh-my-eyes .2s infinite;
 	  -moz-animation:    argh-my-eyes .2s infinite;
