--- a/content.html
+++ b/content.html
@@ -49,11 +49,13 @@
 	  }
 </style>
 <body>
-	<video class="myVideo" preload="auto" src="src/never.mp4" autoplay muted loop></video>
-	<video class="myVideo2" preload="auto" src="src/scream.mp4" autoplay muted loop></video>
+	<video class="myVideo" preload="auto" src="src/never.mp4" loop></video>
+	<video class="myVideo2" preload="auto" src="src/scream.mp4" loop></video>
 	<script>
 		window.onload=function(){
 			setTimeout(function(){
+				document.querySelector(".myVideo").play();
+				document.querySelector(".myVideo2").play();
 				document.querySelector(".myVideo").muted=false;
 				document.querySelector(".myVideo2").muted=false;
 				},3000
