--- a/content.html
+++ b/content.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta name="viewport" content="width=device-width">
@@ -64,4 +64,4 @@
 	}
 	</script>
 </body>
-</html>
+</html> -->
