--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 	<title>Document</title>
 </head>
 <body>
-	<span><div class="cur animation">WASD-IT.com</div><div class="static">e.U</div></span>
+	<span><div class="content animation">WASD-IT.com</div><div class="static">e.U</div></span>
 </body>
 </html>
